# C-InfoStealer

./: .gitignore  CMakeLists.txt  README.md  compile.bat
include/: _strcat.h  browser.h  copy.h  decryptor.h  vaultkey.h
src/: _strcat.c  browser.c  copy.c  decryptor.c  main.c  vaultkey.c
